2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/ (new): Moved from ../tetex/ to here and adapted.
	* Makefile.am: Adapted.

2012-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/ (removed): Moved from here to ../tetex/.
	* Makefile.am: Adapted.

2012-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/ (new): Moved from ../tetex/ to here and adapted.
	* Makefile.am: Adapted.

2011-09-10  Reinhard Kotucha  <reinhard.kotucha@web.de>

	* w32_wrapper/runscript.tlu: added -dDisableFAPI=true to psview
	argument list. Needed by gs-9.xx

2010-12-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Added KPSE_CHECK_WIN32.
	* context/{ctxtools,mptopdf,pstopdf,texexec,texmfstart}.man:
	Moved from ../tetex/context/ to here.
	* context/Makefile.am: Adapted.
	For WIN32 skip the shell scripts.

2010-05-30  Karl Berry  <karl@tug.org>

	* configure.ac: add context subdir, 2010.
	* context: new subdir.

2009-12-14  Karl Berry  <karl@tug.org>

	* *.bat, old format scripts: remove, obsolete.
	* Makefile.am: don't distribute them.

2009-09-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tl-w32-starter.bat (removed): Replaced ...
	* tl-w32-wrapper.cmd (new): ... by this.
	* Makefile.am (EXTRA_DIST): Adapted.

2009-11-25  Karl Berry  <karl@tug.org>

	* Makefile.am (dist_man1_MANS): remove this, as getnonfreefonts
	will now be separate from TeX Live.

2009-09-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* runscript*, Makefile.am: New version of Win32 wrapper.

2009-09-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* runscript.{c,exe} (new): Win32 wrapper.
	* Makefile.am: Add the new files.

2009-07-25  Karl Berry  <karl@tug.org>

	* tl-w32-starter.bat: fix inconsistent "copyright" and "public domain".

2009-05-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.

2009-04-03  Karl Berry  <karl@tug.org>

	* Makefile.am (EXTRA_DIST): remove texdoc.man from list.
	* texdoc.man: remove file; maintained separately now